svg 크기를 설정했습니다
보다 여유로운 공간을 가질 수 있게 했습니다

--- a/Show.html
+++ b/Show.html
@@ -18,7 +18,7 @@
         <input type="text" id="SearchTxt" placeholder="Search...">
         <input type="button" id="SearchBtn" value="Search">
     </div>
-    <svg></svg>
+    <svg width="800" height="600"></svg>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/js/show.js"></script>
