--- a/subject-chart.html
+++ b/subject-chart.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과목 이수체계도</title>
-    <link rel="stylesheet" href="./css/subject-chart.css" />
-    <link rel="stylesheet" href="./css/search.css">
+    <link rel="stylesheet" href="/css/subject-chart.css" />
+    <link rel="stylesheet" href="/css/search.css">
 
     <style>
         .transparent {
