--- a/Show.html
+++ b/Show.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Course Flow Chart</title>
     <link rel="stylesheet" href="/css/show.css" />
