--- a/subject-chart.html
+++ b/subject-chart.html
@@ -20,6 +20,8 @@
     <h1>과목 이수체계도</h1>
     <button id="goBackBtn">돌아가기</button>
     <button id="saveAsPngBtn">PNG로 저장</button>
+    <button id="disableAllBtn">모든 과목 비활성화</button>
+    <button id="enableAllBtn">모든 과목 활성화</button>
 
     <br /><br />
     <div id="searchContainer">
@@ -34,9 +36,8 @@
         <button onclick="filterCourses('2학년')">2학년</button>
         <button onclick="filterCourses('3학년')">3학년</button>
         <button onclick="filterCourses('4학년')">4학년</button>
-        <button class="button" onclick="resetFilter()">전체</button>
     </div>
-    
+
     <pre id="subjectChart" class="mermaid">
         %% Subgraph example
         graph LR
@@ -255,8 +256,8 @@
         style 4학년 fill:#ADD8E6
     </pre>
 
-    <script src="js/subject-chart.js"></script>
     <script type="module" src="js/subject-chart-module.js"></script>
+    <script src="js/subject-chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         document.getElementById('saveAsPngBtn').addEventListener('click', function () {
@@ -285,11 +286,6 @@
                 }
             });
         }
-        function resetFilter() {
-            document.querySelectorAll('.node').forEach(node => {
-                node.classList.remove('transparent');
-            });
-        }
 
         document.querySelectorAll('#navigation button').forEach(button => {
             button.addEventListener('click', () => {
@@ -297,7 +293,20 @@
                 filterCourses(year);
             });
         });
-    </script>    
+
+        document.getElementById('disableAllBtn').addEventListener('click', () => {
+            const allCourses = ['A1', 'A2', 'A3', 'A4', 'B1', 'B2', 'B3', 'B4', 'C1', 'C2', 'C3', 'C4', 'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5', 'G1', 'G2', 'G3', 'G4', 'H1', 'H2', 'H3', 'H4', 'H5', 'I1', 'I2'];
+            allCourses.forEach(courseId => {
+                document.querySelector(`[data-id="${courseId}"]`).classList.add('transparent');
+            });
+        });
+        document.getElementById('enableAllBtn').addEventListener('click', () => {
+            const allCourses = ['A1', 'A2', 'A3', 'A4', 'B1', 'B2', 'B3', 'B4', 'C1', 'C2', 'C3', 'C4', 'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5', 'G1', 'G2', 'G3', 'G4', 'H1', 'H2', 'H3', 'H4', 'H5', 'I1', 'I2'];
+            allCourses.forEach(courseId => {
+                document.querySelector(`[data-id="${courseId}"]`).classList.remove('transparent');
+            });
+        });
+    </script>
 </body>
 
 </html>
