--- a/subject-chart.html
+++ b/subject-chart.html
@@ -7,6 +7,7 @@
     <title>과목 이수체계도</title>
     <link rel="stylesheet" href="/css/subject-chart.css" />
     <link rel="stylesheet" href="/css/search.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <style>
         .transparent {
