--- a/subject-chart.html
+++ b/subject-chart.html
@@ -13,6 +13,15 @@
             opacity: 0.2;
             transition: opacity 0.2s;
         }
+
+        body.dark-mode {
+            background-color: #121212;
+            color: #ffffff;
+        }
+
+        button {
+            margin: 5px;
+        }
     </style>
 </head>
 
@@ -20,6 +29,9 @@
     <h1>과목 이수체계도</h1>
     <button id="goBackBtn">돌아가기</button>
     <button id="saveAsPngBtn">PNG로 저장</button>
+    <button id="disableAllBtn">모든 과목 비활성화</button>
+    <button id="enableAllBtn">모든 과목 활성화</button>
+    <button id="darkModeBtn">다크 모드</button> <!-- 다크 모드 버튼 추가 -->
 
     <br /><br />
     <div id="searchContainer">
@@ -34,9 +46,8 @@
         <button onclick="filterCourses('2학년')">2학년</button>
         <button onclick="filterCourses('3학년')">3학년</button>
         <button onclick="filterCourses('4학년')">4학년</button>
-        <button class="button" onclick="resetFilter()">전체</button>
     </div>
-    
+
     <pre id="subjectChart" class="mermaid">
         %% Subgraph example
         graph LR
@@ -255,8 +266,8 @@
         style 4학년 fill:#ADD8E6
     </pre>
 
-    <script src="js/subject-chart.js"></script>
     <script type="module" src="js/subject-chart-module.js"></script>
+    <script src="js/subject-chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         document.getElementById('saveAsPngBtn').addEventListener('click', function () {
@@ -285,11 +296,6 @@
                 }
             });
         }
-        function resetFilter() {
-            document.querySelectorAll('.node').forEach(node => {
-                node.classList.remove('transparent');
-            });
-        }
 
         document.querySelectorAll('#navigation button').forEach(button => {
             button.addEventListener('click', () => {
@@ -297,7 +303,61 @@
                 filterCourses(year);
             });
         });
-    </script>    
+
+        document.getElementById('disableAllBtn').addEventListener('click', () => {
+            const allCourses = ['A1', 'A2', 'A3', 'A4', 'B1', 'B2', 'B3', 'B4', 'C1', 'C2', 'C3', 'C4', 'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5', 'G1', 'G2', 'G3', 'G4', 'H1', 'H2', 'H3', 'H4', 'H5', 'I1', 'I2'];
+            allCourses.forEach(courseId => {
+                document.querySelector(`[data-id="${courseId}"]`).classList.add('transparent');
+            });
+        });
+
+        document.getElementById('enableAllBtn').addEventListener('click', () => {
+            const allCourses = ['A1', 'A2', 'A3', 'A4', 'B1', 'B2', 'B3', 'B4', 'C1', 'C2', 'C3', 'C4', 'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5', 'G1', 'G2', 'G3', 'G4', 'H1', 'H2', 'H3', 'H4', 'H5', 'I1', 'I2'];
+            allCourses.forEach(courseId => {
+                document.querySelector(`[data-id="${courseId}"]`).classList.remove('transparent');
+            });
+        });
+
+        document.getElementById('darkModeBtn').addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            const isDarkMode = document.body.classList.contains('dark-mode');
+
+            const styleMap = {
+                light: {
+                    "1학년": "#bee9e8",
+                    "2학년": "#87CEFA",
+                    "3학년": "#cae9ff",
+                    "4학년": "#ADD8E6"
+                },
+                dark: {
+                    "1학년": "#3a5a5e",
+                    "2학년": "#2b4a5c",
+                    "3학년": "#3b6d80",
+                    "4학년": "#314e6a"
+                }
+            };
+
+            const styleType = isDarkMode ? 'dark' : 'light';
+
+            document.querySelectorAll('.node').forEach(node => {
+                const nodeId = node.getAttribute('data-id');
+                if (nodeId.startsWith('A') || nodeId.startsWith('B')) {
+                    node.style.fill = styleMap[styleType]["1학년"];
+                } else if (nodeId.startsWith('C') || nodeId.startsWith('D')) {
+                    node.style.fill = styleMap[styleType]["2학년"];
+                } else if (nodeId.startsWith('E') || nodeId.startsWith('F')) {
+                    node.style.fill = styleMap[styleType]["3학년"];
+                } else if (nodeId.startsWith('G') || nodeId.startsWith('H')) {
+                    node.style.fill = styleMap[styleType]["4학년"];
+                }
+            });
+        });
+
+        function scrollToSection(sectionId) {
+            const section = document.getElementById(sectionId);
+        }
+    </script>
+
 </body>
 
 </html>
